# authorization

./: Cargo.toml  justfile
.github/actions/rust/: action.yaml
authorization/: Cargo.toml
authorization-bevy/: Cargo.toml
authorization-bevy/src/: lib.rs
authorization-bevy/src/tests/: mod.rs
authorization/src/tests/evaluate/: mod.rs
authorization/src/tests/evaluate/action/: mod.rs
authorization/src/tests/evaluate/condition/: mod.rs
authorization/src/tests/evaluate/effect/: mod.rs
examples/axum/: Cargo.toml  README.md
examples/axum/src/: main.rs
examples/bevy/: Cargo.toml  README.md
examples/bevy-async/: Cargo.toml
examples/bevy-async/src/: artificial_intelligence.rs  attack.rs  authorization_bevy.rs  game_master.rs  kill.rs  loot.rs  main.rs  monster.rs  player.rs  stats.rs
examples/bevy-mmo/: Cargo.toml
examples/bevy-mmo/src/: main.rs
examples/bevy-mmo/src/client/: artificial_intelligence.rs  mod.rs  player.rs
examples/bevy-mmo/src/core/: mod.rs
examples/bevy-mmo/src/replication/: mod.rs
examples/bevy/src/: artificial_intelligence.rs  async_task.rs  attack.rs  authority.rs  authorization_bevy.rs  game_master.rs  identity.rs  interactable.rs  kill.rs  loot.rs  main.rs  monster.rs  network.rs  network_client.rs  network_server.rs  player.rs  take.rs
examples/bevy/src/client/: artificial_intelligence.rs  authority.rs  mod.rs  network.rs
examples/bevy/src/server/: mod.rs  network.rs
src/: lib.rs
src/tests/evaluate/action/wildcard/: mod.rs
src/tests/evaluate/principal/: mod.rs
src/tests/evaluate/resource/: mod.rs
(+5 files in other folders)
